# distillation_in_rl

./: LICENSE
thesis-code-experiments_run/: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  td3.ipynb  td3.py
thesis-code-experiments_run/configs/: base_rlpd_ms3.yml  base_rlpd_ms3_sample_efficient.yml  config.yaml  default_experiment_config.yaml  ppo_config.yaml  ppo_different_tasks.yaml
thesis-code-experiments_run/configs/experiment/: baseline2110.yaml  baseline_mod1.yaml  baseline_mod2.yaml  baseline_mod3.yaml  baseline_mod4.yaml  baseline_mod5.yaml  baseline_other_task.yaml  baseline_other_task2.yaml  bench_baseline.yaml  bench_baseline_kl_mod.yaml  bench_interch50.yaml  bench_octo_eps50.yaml  bench_octo_eps_decr50.yaml  bench_octo_only.yaml  bench_octo_only2.yaml  bench_reward.yaml  continue_int.yaml  continue_int2.yaml  continue_int3.yaml  debug.yaml  ex01.yaml  ex02.yaml  ex100.yaml  ex101.yaml  ex102.yaml  ex103_baseline.yaml  ex95.yaml  ex98.yaml  no_ext_policy.yaml  octo_epsilon.yaml  octo_epsilon_decreasing.yaml  octo_only.yaml  octo_reward_based.yaml  octo_than_int.yaml  plot2_mod.yaml  plot2_mod_eps_octo_decr_1_mse.yaml  plot2_mod_mse_val.yaml  plot2_mod_mse_val_act.yaml  (+7 more)
thesis-code-experiments_run/octoplus/: main.py  main2.py  metrics_report.txt  rldp.sh  rldp_debug  rldp_train.py
thesis-code-experiments_run/requirements/: requirements.txt  sac_requirements.txt  server_requirements.txt
thesis-code-experiments_run/tutorials/: 2_reinforcement_learning(1).ipynb  baselines_train_ppo.py  customize_environments(3).ipynb
(+36 files in other folders)
