[tool.poetry]
name = "octoplus"
version = "1.1.0"
description = "making RL faster with Octo"
authors = ["Margarita Piscenco <piscenco@gmail.com>"]
license = "MIT"
readme = "README.md"

# not sure if I need classifiers
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# packages = [{ include = "octoplus", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

# dependencies:

[tool.poetry.dev-dependencies]
# testing, linting tools unit test or pytest? what needs test coverage?
# pytest = "^7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
# for configs
hydra-colorlog = "^1.2.0"
hydra-core = "^1.3.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
